--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <p>It was a dark and stormy night...</p>
     <p>I heard something strange</p>
+    <p>Scared, I looked out my window.</p>
   </body>
 </html>
