--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <p>It was a dark and stormy night...</p>
     <p>I heard something strange</p>
     <p>Scared, I looked out my window.</p>
+    <p>And saw Sean Spicer, hiding in the bushes...</p>
   </body>
 </html>
