Added a link and changed the font

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
   </head>
   <body>
     <p>It was a dark and stormy night...</p>
     <p>I heard something strange</p>
     <p>Scared, I looked out my window.</p>
-    <p>And saw Sean Spicer, hiding in the bushes...</p>
+    <p>And saw <a href="https://en.wikipedia.org/wiki/Sean_Spicer">Sean Spicer, hiding in the bushes...</a></p>
   </body>
 </html>
